Mon May 29 17:44:01 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * examples/Display/Display_Base/Display_Base.mpc:

          Changed the base project of Display_Base_stub from
          ciao_client_dnc to ciao_events_base_dnc, in order to pull
          in a needed dependency on CIAO_DnC_Container. Thanks to
          Ming Xiong <mxiong@dre.vanderbilt.edu> for supplying the
          fix.

Mon May 29 15:32:38 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * examples/Display/NavDisplay/NavDisplay.mpc:

          Cosmetic changes (shortened long lines).

        * examples/Display/NavDisplayGUI_exec/NavDisplayGUI.mpc:

          Changed 'after +=' and 'libs +=' lines to reflect recent
          changes to other examples/Display projects.

Fri May 26 13:57:38 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * DAnCE/RepositoryManager/RMAdmin.cpp(ACE_TMAIN):

          Fixed unused variable warning, cosmetic changes.

Fri May 26 12:59:03 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * DAnCE/NodeManager/NAM_Map.cpp:
          Make the equality test explicit to work with the revised octet
          sequence implementation.

Thu May 25 19:02:52 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ciao/Container_Base.cpp(ciao_install_home):

          Changed the single-step reinterpret_cast of the component
          DLL entry points to be a two-step process: first to the
          integer type 'ptrdiff_t' then to the desired pointer-to-
          function type. A single cast won't work because casting
          from pointer-to-object (even void*) to pointer-to-function
          directly is not allowed in C++.

Thu May 25 11:50:39 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * ciao/Container_Base.cpp:
          Replace the use of static_cast in ciao_install_home with
          reinterpret_cast since void* sources are involved.

Wed May 24 17:35:53 UTC 2006  Nanbor Wang  <nanbor@exothermic.txcorp.com>
